Added additional activity screens
Added MyProfile, MyTrophyRoom. Few minor updates in other files

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,5 +14,13 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_challenge_notification_screen">Challenge Notification</string>
     <string name="title_activity_results">Results</string>
+    <string name="Challenge_accepted">Challenge Accepted</string>
+    <string name="Challenge_refused ">Challenge Refused</string>
+
+    <drawable name="Challenge_accepted">#FF00FF</drawable>
+    <drawable name="Challenge_refused">#00FFFF</drawable>
+
+    <string name="title_activity_my_profile">MyProfile</string>
+    <string name="title_activity_my_trophy_room">MyTrophyRoom</string>
 
 </resources>
