--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,5 +28,9 @@
     <string name="title_activity_trophies">Trophies</string>
     <string name="title_activity_mission_failed">MissionFailed</string>
     <string name="title_activity_challenge_me_now">ChallengeMeNow</string>
+    <string name="title_activity_choose_duration">ChooseDuration</string>
+    <string name="title_activity_my_time_picker_dialog">MyTimePickerDialog</string>
+    <string name="title_activity_results__win">Results_Win</string>
+    <string name="title_activity_no_results">NoResults</string>
 
 </resources>
